# real-time-knowledge-graph-with-gcp

./: .eslintrc.js  .gitignore  .prettierrc  .yarnrc.yml  README.md  package-lock.json  package.json  tsconfig.json
apps/desktop/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/electron/: main.ts  preload.ts  tsconfig.json
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src/components/: ControlPanel.tsx  EntityNode.tsx  ExportDialog.tsx  FeedbackDialog.tsx  KnowledgeGraph.tsx  StatusBar.tsx  TitleBar.tsx  TranscriptPanel.tsx  TranslateDialog.tsx
apps/desktop/src/demo/: demoData.ts  demoStore.ts  index.ts  useDemoMode.ts
apps/desktop/src/hooks/: useAudioCapture.ts  useWebSocket.ts
apps/desktop/src/store/: graphStore.ts
apps/desktop/src/styles/: globals.css
docs/: ARCHITECTURE.md  DESKTOP_APP_DEPLOYMENT.md  GCP_DEPLOYMENT_GUIDE.md
infra/: docker-compose.dev.yml  docker-compose.yml  redis.conf
infra/cloudbuild/: cloudbuild-desktop.yaml  cloudbuild.yaml
infra/terraform/: main.tf  terraform.tfvars.example  variables.tf
servers/api/: Dockerfile  __init__.py  config.py  env.example  extraction.py  graph_state.py  logger.py  main.py  models.py  nlp.py  pyproject.toml  redis_client.py  requirements.txt  stt.py  websocket.py
servers/api/gcp/: __init__.py  bigquery_client.py  feedback.py  speech_to_text.py  storage.py  vertex_ai.py
